--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,17 +17,11 @@ jobs:
       contents: write
       
     steps:
-      # 1. 安装ImageMagick
-      - name: Install ImageMagick
-        run: |
-          choco install imagemagick -y
-          refreshenv
-      
-      # 2. 检出代码
+      # 1. 检出代码
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 3. 解析JSON输入并提取参数
+      # 2. 解析JSON输入并提取参数
       - name: Parse JSON input
         id: parse-json
         run: |
@@ -36,7 +30,7 @@ jobs:
           echo "image_base64=$($jsonInput.file)" >> $env:GITHUB_OUTPUT
           echo "project_dir=$(Split-Path -Path $($jsonInput.model) -Parent)" >> $env:GITHUB_OUTPUT
 
-      # 4. 复制整个项目目录到工作目录
+      # 3. 复制整个项目目录到工作目录
       - name: Copy entire project directory
         run: |
           # 创建项目目录
@@ -59,8 +53,8 @@ jobs:
           
           echo "project_dir=$projectDir" >> $env:GITHUB_OUTPUT
 
-      # 5. 优化并替换图片
-      - name: Replace and optimize image
+      # 4. 替换图片（不压缩）
+      - name: Replace image
         run: |
           $projectDir = "${{ steps.parse-json.outputs.project_dir }}"
           $imageDir = "$projectDir\images"
@@ -72,11 +66,7 @@ jobs:
           
           # 解码Base64图片
           $bytes = [Convert]::FromBase64String('${{ steps.parse-json.outputs.image_base64 }}')
-          $tempImage = "$env:TEMP\temp.png"
-          [IO.File]::WriteAllBytes($tempImage, $bytes)
-          
-          # 优化图片尺寸和质量
-          magick convert $tempImage -resize 320x320 -quality 80 "$imageDir\pic.png"
+          [IO.File]::WriteAllBytes("$imageDir\pic.png", $bytes)
           
           # 验证图片
           if (-not (Test-Path "$imageDir\pic.png")) {
@@ -84,17 +74,17 @@ jobs:
               exit 1
           }
           
-          # 输出图片信息
-          $imageInfo = magick identify "$imageDir\pic.png"
-          Write-Host "Optimized image info: $imageInfo"
+          # 输出图片大小
+          $imageSize = (Get-Item "$imageDir\pic.png").Length
+          Write-Host "Image size: $imageSize bytes"
 
-      # 6. 设置Python环境
+      # 5. 设置Python环境
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      # 7. 运行Python脚本
+      # 6. 运行Python脚本
       - name: Run Python script
         env:
           PYTHONIOENCODING: utf-8
@@ -112,7 +102,7 @@ jobs:
               Write-Host "Output file not found"
           }
 
-      # 8. 创建Release并上传
+      # 7. 创建Release并上传
       - name: Create Release and Upload Asset
         uses: softprops/action-gh-release@v2
         if: success()
@@ -124,7 +114,7 @@ jobs:
           draft: false
           prerelease: false
 
-      # 9. 输出下载链接
+      # 8. 输出下载链接
       - name: Output Release URL
         run: |
           $outputFile = Get-ChildItem -Path "output" -Filter "*.face" | Select-Object -First 1
