--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,26 +24,29 @@ jobs:
           $jsonInput = '${{ github.event.inputs.input_json }}' | ConvertFrom-Json
           echo "fprj_path=$($jsonInput.model)" >> $env:GITHUB_OUTPUT
           echo "image_base64=$($jsonInput.file)" >> $env:GITHUB_OUTPUT
+          echo "project_dir=$(Split-Path -Path $($jsonInput.model) -Parent)" >> $env:GITHUB_OUTPUT
 
-      # 3. 准备项目文件
-      - name: Prepare project
+      # 3. 准备项目目录
+      - name: Prepare project directory
         run: |
-          # 创建项目目录
           $projectDir = "project"
           New-Item -ItemType Directory -Path $projectDir -Force
-          
-          # 复制并重命名FPRJ文件
-          Copy-Item -Path "${{ steps.parse-json.outputs.fprj_path }}" -Destination "$projectDir\fprj.fprj" -Force
-          
-          # 创建图片目录
+          $sourceDir = "${{ steps.parse-json.outputs.project_dir }}"
+          Copy-Item -Path "$sourceDir\*" -Destination $projectDir -Recurse -Force
+          $fprjFile = Split-Path -Path "${{ steps.parse-json.outputs.fprj_path }}" -Leaf
+          Rename-Item -Path "$projectDir\$fprjFile" -NewName "fprj.fprj" -Force
+          echo "project_dir=$projectDir" >> $env:GITHUB_OUTPUT
+
+      # 4. 替换图片
+      - name: Replace image
+        run: |
+          $projectDir = "${{ steps.parse-json.outputs.project_dir }}"
           $imageDir = "$projectDir\images"
-          New-Item -ItemType Directory -Path $imageDir -Force
-          
-          # 保存图片
+          New-Item -ItemType Directory -Path $imageDir -Force -ErrorAction SilentlyContinue
           $bytes = [Convert]::FromBase64String('${{ steps.parse-json.outputs.image_base64 }}')
           [IO.File]::WriteAllBytes("$imageDir\pic.png", $bytes)
 
-      # 4. 运行编译脚本
+      # 5. 运行编译脚本
       - name: Run Python script
         uses: actions/setup-python@v4
         with:
@@ -51,9 +54,8 @@ jobs:
         run: |
           python compile_watchface.py
 
-      # 5. 创建Release并获取下载链接
-      - name: Create Release and Get URL
-        id: create-release
+      # 6. 创建Release并上传.face文件
+      - name: Create Release and Upload Asset
         uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
@@ -62,6 +64,14 @@ jobs:
           files: output/*.face
           draft: false
           prerelease: false
+
+      # 7. 输出下载链接
+      - name: Output Release URL
+        run: |
+          $outputFile = Get-ChildItem -Path "output" -Filter "*.face" | Select-Object -First 1
+          $downloadUrl = "https://github.com/${{ github.repository }}/releases/download/face-${{ github.run_id }}/$($outputFile.Name)"
+          echo "::set-output name=download_url::$downloadUrl"
+        id: set-url
       
     outputs:
-      download_url: ${{ steps.create-release.outputs.url }}
+      download_url: ${{ steps.set-url.outputs.download_url }}
