--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,10 +54,23 @@ jobs:
         run: |
           python compile_watchface.py
 
-      # 6. 创建Release并获取下载链接
+      # 6. 验证输出文件
+      - name: Verify output file
+        run: |
+          if (Test-Path "output\*.face") {
+              $file = Get-ChildItem -Path "output" -Filter "*.face"
+              Write-Host "Output file exists: $($file.FullName)"
+              Write-Host "File size: $($file.Length) bytes"
+          } else {
+              Write-Error "No output file found"
+              exit 1
+          }
+
+      # 7. 创建Release并获取下载链接
       - name: Create Release and Get URL
         id: create-release
         uses: softprops/action-gh-release@v2
+        if: success()
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
