--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,18 @@ jobs:
       - name: Run Python script
         run: |
           python compile_watchface.py
+            # 在运行Python脚本后添加
+      - name: Debug output file
+        run: |
+          $file = Get-ChildItem -Path "output" -Filter "*.face"
+          if ($file) {
+              Write-Host "Output file size: $($file.Length) bytes"
+              # 输出文件头部
+              $header = Get-Content -Path $file.FullName -Encoding Byte -TotalCount 32
+              Write-Host "File header: $header"
+          } else {
+              Write-Error "No output file found"
+          }
 
       # 6. 验证输出文件
       - name: Verify output file
