--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,29 +53,26 @@ jobs:
       - name: Run Python script
         run: |
           python compile_watchface.py
-            # 在运行Python脚本后添加
-      - name: Debug output file
+
+      # 6. 检查输出文件
+      - name: Check output file
         run: |
           $file = Get-ChildItem -Path "output" -Filter "*.face"
           if ($file) {
-              Write-Host "Output file size: $($file.Length) bytes"
-              # 输出文件头部
-              $header = Get-Content -Path $file.FullName -Encoding Byte -TotalCount 32
-              Write-Host "File header: $header"
+              $size = $file.Length
+              Write-Host "Output file size: $size bytes"
+              
+              # 使用.NET方法读取文件头部
+              $stream = [System.IO.File]::OpenRead($file.FullName)
+              $buffer = New-Object byte[] 100
+              $bytesRead = $stream.Read($buffer, 0, 100)
+              $stream.Close()
+              
+              # 转换为十六进制字符串
+              $hexString = [BitConverter]::ToString($buffer, 0, $bytesRead)
+              Write-Host "File header (hex): $hexString"
           } else {
               Write-Error "No output file found"
-          }
-
-      # 6. 验证输出文件
-      - name: Verify output file
-        run: |
-          if (Test-Path "output\*.face") {
-              $file = Get-ChildItem -Path "output" -Filter "*.face"
-              Write-Host "Output file exists: $($file.FullName)"
-              Write-Host "File size: $($file.Length) bytes"
-          } else {
-              Write-Error "No output file found"
-              exit 1
           }
 
       # 7. 创建Release并获取下载链接
