--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,12 +58,17 @@ jobs:
         with:
           python-version: '3.10'
 
-      # 6. 运行Python脚本
+      # 6. 安装Python依赖
+      - name: Install Python dependencies
+        run: |
+          pip install psutil
+
+      # 7. 运行Python脚本
       - name: Run Python script
         run: |
           python compile_watchface.py
 
-      # 7. 创建Release并获取下载链接
+      # 8. 创建Release并获取下载链接
       - name: Create Release and Get URL
         id: create-release
         uses: softprops/action-gh-release@v2
