--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,9 @@ jobs:
           # 保存图片
           $bytes = [Convert]::FromBase64String('${{ steps.parse-json.outputs.image_base64 }}')
           [IO.File]::WriteAllBytes("$imageDir\pic.png", $bytes)
+          
+          # 创建输出目录
+          New-Item -ItemType Directory -Path "$projectDir\output" -Force
 
       # 5. 设置Python环境
       - name: Set up Python
@@ -58,15 +61,32 @@ jobs:
         with:
           python-version: '3.10'
 
-      # 6. 安装Python依赖
-      - name: Install Python dependencies
-        run: |
-          pip install psutil
-
-      # 7. 运行Python脚本
+      # 6. 运行Python脚本
       - name: Run Python script
         run: |
           python compile_watchface.py
+
+      # 7. 验证输出文件
+      - name: Verify output file
+        run: |
+          $file = Get-ChildItem -Path "output" -Filter "*.face"
+          if ($file) {
+              $size = $file.Length
+              Write-Host "Output file size: $size bytes"
+              
+              # 使用.NET方法读取文件头部
+              $stream = [System.IO.File]::OpenRead($file.FullName)
+              $buffer = New-Object byte[] 100
+              $bytesRead = $stream.Read($buffer, 0, 100)
+              $stream.Close()
+              
+              # 转换为十六进制字符串
+              $hexString = [BitConverter]::ToString($buffer, 0, $bytesRead)
+              Write-Host "File header (hex): $hexString"
+          } else {
+              Write-Error "No output file found"
+              exit 1
+          }
 
       # 8. 创建Release并获取下载链接
       - name: Create Release and Get URL
