--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,34 +71,33 @@ jobs:
         run: |
           python compile_watchface.py
 
-      # 8. 验证输出文件
+      # 8. 调试工作目录
+      - name: Debug work directory
+        if: always()
+        run: |
+          # 输出工作目录结构
+          Get-ChildItem -Path "work" -Recurse
+          
+          # 查找编译工具日志
+          $logFile = Get-ChildItem -Path "work" -Filter "*.log" -Recurse
+          if ($logFile) {
+              Write-Host "Compiler log:"
+              Get-Content -Path $logFile.FullName
+          }
+
+      # 9. 验证输出文件
       - name: Verify output file
         run: |
           $file = Get-ChildItem -Path "output" -Filter "*.face"
           if ($file) {
               $size = $file.Length
               Write-Host "Output file size: $size bytes"
-              if ($size -lt 1MB) {
-                  # 输出工作目录内容用于调试
-                  Write-Host "Contents of work directory:"
-                  Get-ChildItem -Path "work" -Recurse
-                  
-                  # 输出编译工具日志
-                  $logFile = Get-ChildItem -Path "work" -Filter "*.log" -Recurse
-                  if ($logFile) {
-                      Write-Host "Compiler log:"
-                      Get-Content -Path $logFile.FullName
-                  }
-                  
-                  Write-Error "Output file is too small"
-                  exit 1
-              }
           } else {
               Write-Error "No output file found"
               exit 1
           }
 
-      # 9. 创建Release并获取下载链接
+      # 10. 创建Release并获取下载链接
       - name: Create Release and Get URL
         id: create-release
         uses: softprops/action-gh-release@v2
